--- a/synthesis/lab2/top_summary.html
+++ b/synthesis/lab2/top_summary.html
@@ -2,7 +2,7 @@
 <BODY TEXT='#000000' BGCOLOR='#FFFFFF' LINK='#0000EE' VLINK='#551A8B' ALINK='#FF0000'>
 <TABLE BORDER CELLSPACING=0 CELLPADDING=3 WIDTH='100%'>
 <TR ALIGN=CENTER BGCOLOR='#99CCFF'>
-<TD ALIGN=CENTER COLSPAN='4'><B>top Project Status (03/09/2018 - 12:08:39)</B></TD></TR>
+<TD ALIGN=CENTER COLSPAN='4'><B>top Project Status (03/09/2018 - 12:26:09)</B></TD></TR>
 <TR ALIGN=LEFT>
 <TD BGCOLOR='#FFFF99'><B>Project File:</B></TD>
 <TD>lab2.xise</TD>
@@ -19,12 +19,13 @@
 <TD BGCOLOR='#FFFF99'><B>Target Device:</B></TD>
 <TD>xc6slx45-2fgg676</TD>
 <TD BGCOLOR='#FFFF99'><UL><LI><B>Errors:</B></LI></UL></TD>
-<TD>&nbsp;</TD>
+<TD>
+No Errors</TD>
 </TR>
 <TR ALIGN=LEFT>
 <TD BGCOLOR='#FFFF99'><B>Product Version:</B></TD><TD>ISE 14.6</TD>
 <TD BGCOLOR='#FFFF99'><UL><LI><B>Warnings:</B></LI></UL></TD>
-<TD>&nbsp;</TD>
+<TD ALIGN=LEFT><A HREF_DISABLED='D:/New folder (2)/RA117-205/lab2/synthesis/lab2\_xmsgs/*.xmsgs?&DataKey=Warning'>63 Warnings (1 new)</A></TD>
 </TR>
 <TR ALIGN=LEFT>
 <TD BGCOLOR='#FFFF99'><B>Design Goal:</B></dif></TD>
@@ -59,13 +60,13 @@ System Settings</A>
 <TD ALIGN=LEFT><B>Slice Logic Utilization</B></TD><TD><B>Used</B></TD><TD><B>Available</B></TD><TD><B>Utilization</B></TD><TD COLSPAN='2'><B>Note(s)</B></TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>Number of Slice Registers</TD>
-<TD ALIGN=RIGHT>34</TD>
+<TD ALIGN=RIGHT>36</TD>
 <TD ALIGN=RIGHT>54,576</TD>
 <TD ALIGN=RIGHT>1%</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>&nbsp;&nbsp;&nbsp;&nbsp;Number used as Flip Flops</TD>
-<TD ALIGN=RIGHT>34</TD>
+<TD ALIGN=RIGHT>36</TD>
 <TD>&nbsp;</TD>
 <TD>&nbsp;</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
@@ -89,19 +90,19 @@ System Settings</A>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>Number of Slice LUTs</TD>
-<TD ALIGN=RIGHT>37</TD>
+<TD ALIGN=RIGHT>38</TD>
 <TD ALIGN=RIGHT>27,288</TD>
 <TD ALIGN=RIGHT>1%</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>&nbsp;&nbsp;&nbsp;&nbsp;Number used as logic</TD>
-<TD ALIGN=RIGHT>34</TD>
+<TD ALIGN=RIGHT>35</TD>
 <TD ALIGN=RIGHT>27,288</TD>
 <TD ALIGN=RIGHT>1%</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Number using O6 output only</TD>
-<TD ALIGN=RIGHT>16</TD>
+<TD ALIGN=RIGHT>17</TD>
 <TD>&nbsp;</TD>
 <TD>&nbsp;</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
@@ -203,37 +204,37 @@ System Settings</A>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>Number of LUT Flip Flop pairs used</TD>
-<TD ALIGN=RIGHT>43</TD>
+<TD ALIGN=RIGHT>44</TD>
 <TD>&nbsp;</TD>
 <TD>&nbsp;</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>&nbsp;&nbsp;&nbsp;&nbsp;Number with an unused Flip Flop</TD>
-<TD ALIGN=RIGHT>10</TD>
-<TD ALIGN=RIGHT>43</TD>
-<TD ALIGN=RIGHT>23%</TD>
+<TD ALIGN=RIGHT>9</TD>
+<TD ALIGN=RIGHT>44</TD>
+<TD ALIGN=RIGHT>20%</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>&nbsp;&nbsp;&nbsp;&nbsp;Number with an unused LUT</TD>
 <TD ALIGN=RIGHT>6</TD>
-<TD ALIGN=RIGHT>43</TD>
+<TD ALIGN=RIGHT>44</TD>
 <TD ALIGN=RIGHT>13%</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>&nbsp;&nbsp;&nbsp;&nbsp;Number of fully used LUT-FF pairs</TD>
-<TD ALIGN=RIGHT>27</TD>
-<TD ALIGN=RIGHT>43</TD>
-<TD ALIGN=RIGHT>62%</TD>
+<TD ALIGN=RIGHT>29</TD>
+<TD ALIGN=RIGHT>44</TD>
+<TD ALIGN=RIGHT>65%</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>&nbsp;&nbsp;&nbsp;&nbsp;Number of unique control sets</TD>
-<TD ALIGN=RIGHT>6</TD>
+<TD ALIGN=RIGHT>7</TD>
 <TD>&nbsp;</TD>
 <TD>&nbsp;</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>&nbsp;&nbsp;&nbsp;&nbsp;Number of slice register sites lost<BR>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;to control set restrictions</TD>
-<TD ALIGN=RIGHT>37</TD>
+<TD ALIGN=RIGHT>43</TD>
 <TD ALIGN=RIGHT>54,576</TD>
 <TD ALIGN=RIGHT>1%</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
@@ -431,7 +432,7 @@ System Settings</A>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>Average Fanout of Non-Clock Nets</TD>
-<TD ALIGN=RIGHT>3.23</TD>
+<TD ALIGN=RIGHT>3.42</TD>
 <TD>&nbsp;</TD>
 <TD>&nbsp;</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
@@ -468,21 +469,21 @@ System Settings</A>
 <TR ALIGN=CENTER BGCOLOR='#99CCFF'><TD ALIGN=CENTER COLSPAN='6'><B>Detailed Reports</B></TD><TD ALIGN=RIGHT WIDTH='10%'COLSPAN=1> <A HREF_DISABLED="?&ExpandedTable=DetailedReports"><B>[-]</B></a></TD></TR>
 <TR BGCOLOR='#FFFF99'><TD><B>Report Name</B></TD><TD><B>Status</B></TD><TD><B>Generated</B></TD>
 <TD ALIGN=LEFT><B>Errors</B></TD><TD ALIGN=LEFT><B>Warnings</B></TD><TD ALIGN=LEFT COLSPAN='2'><B>Infos</B></TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='D:/New folder (2)/RA117-205/lab2/synthesis/lab2\top.syr'>Synthesis Report</A></TD><TD>Current</TD><TD>pet 9. mar 12:08:00 2018</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT><A HREF_DISABLED='D:/New folder (2)/RA117-205/lab2/synthesis/lab2\_xmsgs/xst.xmsgs?&DataKey=Warning'>58 Warnings (0 new)</A></TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='D:/New folder (2)/RA117-205/lab2/synthesis/lab2\_xmsgs/xst.xmsgs?&DataKey=Info'>16 Infos (8 new)</A></TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='D:/New folder (2)/RA117-205/lab2/synthesis/lab2\top.bld'>Translation Report</A></TD><TD>Current</TD><TD>pet 9. mar 12:08:06 2018</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT><A HREF_DISABLED='D:/New folder (2)/RA117-205/lab2/synthesis/lab2\_xmsgs/ngdbuild.xmsgs?&DataKey=Warning'>2 Warnings (1 new)</A></TD><TD ALIGN=LEFT COLSPAN='2'>0</TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='D:/New folder (2)/RA117-205/lab2/synthesis/lab2\top_map.mrp'>Map Report</A></TD><TD>Current</TD><TD>pet 9. mar 12:08:14 2018</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD COLSPAN='2'>&nbsp;</TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='D:/New folder (2)/RA117-205/lab2/synthesis/lab2\top.par'>Place and Route Report</A></TD><TD>Current</TD><TD>pet 9. mar 12:08:22 2018</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT><A HREF_DISABLED='D:/New folder (2)/RA117-205/lab2/synthesis/lab2\_xmsgs/par.xmsgs?&DataKey=Warning'>1 Warning (0 new)</A></TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='D:/New folder (2)/RA117-205/lab2/synthesis/lab2\_xmsgs/par.xmsgs?&DataKey=Info'>3 Infos (0 new)</A></TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='D:/New folder (2)/RA117-205/lab2/synthesis/lab2\top.syr'>Synthesis Report</A></TD><TD>Current</TD><TD>pet 9. mar 12:25:30 2018</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT><A HREF_DISABLED='D:/New folder (2)/RA117-205/lab2/synthesis/lab2\_xmsgs/xst.xmsgs?&DataKey=Warning'>58 Warnings (0 new)</A></TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='D:/New folder (2)/RA117-205/lab2/synthesis/lab2\_xmsgs/xst.xmsgs?&DataKey=Info'>10 Infos (0 new)</A></TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='D:/New folder (2)/RA117-205/lab2/synthesis/lab2\top.bld'>Translation Report</A></TD><TD>Current</TD><TD>pet 9. mar 12:25:35 2018</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT><A HREF_DISABLED='D:/New folder (2)/RA117-205/lab2/synthesis/lab2\_xmsgs/ngdbuild.xmsgs?&DataKey=Warning'>2 Warnings (1 new)</A></TD><TD ALIGN=LEFT COLSPAN='2'>0</TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='D:/New folder (2)/RA117-205/lab2/synthesis/lab2\top_map.mrp'>Map Report</A></TD><TD>Current</TD><TD>pet 9. mar 12:25:42 2018</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT><A HREF_DISABLED='D:/New folder (2)/RA117-205/lab2/synthesis/lab2\_xmsgs/map.xmsgs?&DataKey=Warning'>1 Warning (0 new)</A></TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='D:/New folder (2)/RA117-205/lab2/synthesis/lab2\_xmsgs/map.xmsgs?&DataKey=Info'>9 Infos (0 new)</A></TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='D:/New folder (2)/RA117-205/lab2/synthesis/lab2\top.par'>Place and Route Report</A></TD><TD>Current</TD><TD>pet 9. mar 12:25:51 2018</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT><A HREF_DISABLED='D:/New folder (2)/RA117-205/lab2/synthesis/lab2\_xmsgs/par.xmsgs?&DataKey=Warning'>1 Warning (0 new)</A></TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='D:/New folder (2)/RA117-205/lab2/synthesis/lab2\_xmsgs/par.xmsgs?&DataKey=Info'>3 Infos (0 new)</A></TD></TR>
 <TR ALIGN=LEFT><TD>Power Report</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD COLSPAN='2'>&nbsp;</TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='D:/New folder (2)/RA117-205/lab2/synthesis/lab2\top.twr'>Post-PAR Static Timing Report</A></TD><TD>Current</TD><TD>pet 9. mar 12:08:27 2018</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT><A HREF_DISABLED='D:/New folder (2)/RA117-205/lab2/synthesis/lab2\_xmsgs/trce.xmsgs?&DataKey=Warning'>1 Warning (0 new)</A></TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='D:/New folder (2)/RA117-205/lab2/synthesis/lab2\_xmsgs/trce.xmsgs?&DataKey=Info'>4 Infos (0 new)</A></TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='D:/New folder (2)/RA117-205/lab2/synthesis/lab2\top.bgn'>Bitgen Report</A></TD><TD>Current</TD><TD>pet 9. mar 12:08:35 2018</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='D:/New folder (2)/RA117-205/lab2/synthesis/lab2\_xmsgs/bitgen.xmsgs?&DataKey=Info'>1 Info (0 new)</A></TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='D:/New folder (2)/RA117-205/lab2/synthesis/lab2\top.twr'>Post-PAR Static Timing Report</A></TD><TD>Current</TD><TD>pet 9. mar 12:25:56 2018</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT><A HREF_DISABLED='D:/New folder (2)/RA117-205/lab2/synthesis/lab2\_xmsgs/trce.xmsgs?&DataKey=Warning'>1 Warning (0 new)</A></TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='D:/New folder (2)/RA117-205/lab2/synthesis/lab2\_xmsgs/trce.xmsgs?&DataKey=Info'>4 Infos (0 new)</A></TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='D:/New folder (2)/RA117-205/lab2/synthesis/lab2\top.bgn'>Bitgen Report</A></TD><TD>Current</TD><TD>pet 9. mar 12:26:04 2018</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='D:/New folder (2)/RA117-205/lab2/synthesis/lab2\_xmsgs/bitgen.xmsgs?&DataKey=Info'>1 Info (0 new)</A></TD></TR>
 </TABLE>
 &nbsp;<BR><TABLE BORDER CELLSPACING=0 CELLPADDING=3 WIDTH='100%'>
 <TR ALIGN=CENTER BGCOLOR='#99CCFF'><TD ALIGN=CENTER COLSPAN='3'><B>Secondary Reports</B></TD><TD ALIGN=RIGHT WIDTH='10%'COLSPAN=1> <A HREF_DISABLED="?&ExpandedTable=SecondaryReports"><B>[-]</B></a></TD></TR>
 <TR BGCOLOR='#FFFF99'><TD><B>Report Name</B></TD><TD><B>Status</B></TD><TD COLSPAN='2'><B>Generated</B></TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='D:/New folder (2)/RA117-205/lab2/synthesis/lab2\usage_statistics_webtalk.html'>WebTalk Report</A></TD><TD>Out of Date</TD><TD COLSPAN='2'>pet 9. mar 12:08:35 2018</TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='D:/New folder (2)/RA117-205/lab2/synthesis/lab2\webtalk.log'>WebTalk Log File</A></TD><TD>Out of Date</TD><TD COLSPAN='2'>pet 9. mar 12:08:39 2018</TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='D:/New folder (2)/RA117-205/lab2/synthesis/lab2\usage_statistics_webtalk.html'>WebTalk Report</A></TD><TD>Current</TD><TD COLSPAN='2'>pet 9. mar 12:26:04 2018</TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='D:/New folder (2)/RA117-205/lab2/synthesis/lab2\webtalk.log'>WebTalk Log File</A></TD><TD>Current</TD><TD COLSPAN='2'>pet 9. mar 12:26:08 2018</TD></TR>
 </TABLE>
 
 
-<br><center><b>Date Generated:</b> 03/09/2018 - 12:09:33</center>
+<br><center><b>Date Generated:</b> 03/09/2018 - 12:26:09</center>
 </BODY></HTML>
